@@ -35,7 +35,8 @@ Ver.4.4 (in development)
   and the related context is exisiting.
 - [BUG FIX] Fix not to show the error message ("curVal.replace is not a function - EXCEPTION-27") in 
   IMLibElement.setValueToIMNode() if the element of the parameter is a textarea element and the value is false.
-- [WARRING] The JavaScript code editor "codemirror" isn't temporally supported for the updated version doesn't work fine.
+- [BUG FIX] Fix not to show the dialog message when the value of the Local Context is updated.
+- [WARNING] The JavaScript code editor "codemirror" isn't temporally supported for the updated version doesn't work fine.
 
 Ver.4.3 (2014/4/7)
 - The Local Context is supported. You can bind the context named "_" at any place in a page file.
